--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,19 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  border: 0;
+  height: 100%;
+  width: 100%;
+  margin: 0;
 }
 
 .App-header {
+  padding: 50px;
+  width: 50vw;
+  scale: 80%;
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,15 +22,12 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+a{
+  text-decoration: none;
+  color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+img{
+  height: 200px;
+  width: 200px;
 }
